# RustAG

./: .dockerignore  .env.example  .gitattributes  .gitignore  CHANGELOG.md  Cargo.toml  Dockerfile  README.md  RustAG.toml  deny.toml  justfile  package.json  pnpm-lock.yaml  render.yaml  turbo.json
.github/actions/rustag/: action.yml
.github/workflows/: ci.yml  rustag-pr.yml  upgrade-rehearsal.yml
crates/rustag-attest/: Cargo.toml
crates/rustag-attest/src/: attestation.rs  audit.rs  error.rs  evidence.rs  lib.rs  manifest.rs  merkle.rs  state.rs
crates/rustag-cli/: Cargo.toml
crates/rustag-cli/src/: main.rs
crates/rustag-cli/src/commands/: airdrop.rs  attest.rs  create.rs  doctor.rs  forensics.rs  logs.rs  manage.rs  metrics.rs  mod.rs  overrides.rs  preload.rs  record.rs  rehearse.rs  scan.rs  schedule.rs  serve.rs  start.rs  tree.rs  verify.rs
crates/rustag-cloud/: Cargo.toml
crates/rustag-cloud/migrations/: 001_control_plane.sql
crates/rustag-cloud/src/: auth.rs  config.rs  error.rs  lib.rs  main.rs  orchestrator.rs  proxy.rs  store.rs
crates/rustag-compression/: Cargo.toml
crates/rustag-compression/src/: error.rs  hash.rs  lib.rs  tree.rs
crates/rustag-core/: Cargo.toml
crates/rustag-core/src/: account_state.rs  account_store.rs  config.rs  error.rs  fidelity.rs  lib.rs  metrics.rs  realtime.rs  stagenet.rs  sync.rs  util.rs
crates/rustag-core/tests/: integration.rs
crates/rustag-mirror/: Cargo.toml
crates/rustag-mirror/src/: account.rs  error.rs  fetcher.rs  forward_recorder.rs  lib.rs  multi_rpc.rs  rate_limiter.rs  realtime.rs  registry.rs  scheduler.rs  squads.rs  touch_set.rs
crates/rustag-rehearse/: Cargo.toml
crates/rustag-rehearse/src/: error.rs  lib.rs  portable.rs
crates/rustag-replay/: Cargo.toml
crates/rustag-replay/src/: checkpoint.rs  error.rs  journal.rs  lib.rs  lineage.rs  timeline.rs
crates/rustag-rpc/: Cargo.toml
crates/rustag-rpc/src/: error.rs  jsonrpc.rs  lib.rs  rest.rs  server.rs  state.rs  types.rs  ws.rs
crates/rustag-scheduler/: Cargo.toml
crates/rustag-scheduler/src/: activity.rs  error.rs  executor.rs  lib.rs  schedule.rs
crates/rustag-sim/: Cargo.toml
crates/rustag-sim/src/: bundle.rs  diff.rs  error.rs  exploit.rs  fuzz.rs  invariants.rs  lib.rs  report.rs  scenario.rs  semantic.rs
docs/: GROUNDTRUTH.md  PHASE2.md  PHASE3.md  PIVOT_PLAN.md  api-reference.md  architecture.md  demo-script.md  getting-started.md  known-gaps.md  phase1-completion-checklist.md  phase3-checklist.md  slo.md  threat-model.md  tutorial.md
examples/: README.md  jupiter-swap-test.ts  package-lock.json  package.json  pyth-oracle-test.ts  raydium-pool-test.ts  scheduler-faucet.ts  simulation-stress-test.ts  tsconfig.json
infra/: README.md
infra/grafana/alerts/: rustag-alerts.yaml
infra/grafana/dashboards/: rustag-overview.json
infra/kubernetes/: ingress.yaml  kata-runtimeclass.yaml  stagenet-pod-template.yaml
infra/terraform/: kubernetes-cluster.tf  networking.tf  postgres.tf  redis.tf  variables.tf  versions.tf
migrations/: 001_initial.sql  002_phase2.sql
