[workspace]
resolver = "2"
members = [
    "crates/rustag-core",
    "crates/rustag-mirror",
    "crates/rustag-rpc",
    "crates/rustag-cli",
    "crates/rustag-scheduler",
    "crates/rustag-sim",
    "crates/rustag-cloud",
    # --- Phase 3 ---
    "crates/rustag-attest",
    "crates/rustag-replay",
    "crates/rustag-compression",
]

[workspace.package]
version = "0.1.0"
edition = "2021"
rust-version = "1.85"
license = "MIT OR Apache-2.0"
authors = ["RustAG contributors"]
repository = "https://github.com/ShahiTechnovation/RustAG"
homepage = "https://github.com/ShahiTechnovation/RustAG"
description = "A persistent, mainnet-mirroring staging environment for Solana programs"
keywords = ["solana", "svm", "testing", "litesvm", "devtools"]
categories = ["development-tools", "simulation"]

# ----------------------------------------------------------------------------
# Workspace dependency set.
#
# IMPORTANT (version coherence): litesvm 0.12 pins the split Agave SDK crates to
# the `^3.x` line and the address crate to `^2.x`. We MUST stay on the same
# major lines so cargo unifies the `Address`/`Account`/`Hash` types with the
# ones litesvm uses internally. Using the 4.x line of solana-account/hash/etc.
# would fork those types and nothing would type-check against litesvm.
# ----------------------------------------------------------------------------
[workspace.dependencies]
# --- Core SVM runtime ---
# `persistence-internal` exposes `set_account_no_checks`, letting the mirror load
# mainnet accounts verbatim (incl. program/programdata) without LiteSVM
# re-validating rent or trying to JIT-compile them.
litesvm = { version = "0.12", features = ["persistence-internal"] }

# --- Solana split SDK crates (kept on the line litesvm 0.12 unifies on) ---
solana-address = "2.6"            # the canonical key type: `Address` (== Pubkey)
solana-pubkey = "4.2"             # modern shim: `Pubkey = Address`, + `pubkey!` macro
solana-account = "3"              # Account / AccountSharedData
solana-hash = "3"                 # Hash (blockhash)
solana-instruction = "3"          # Instruction
solana-message = "3"              # Message / VersionedMessage
solana-transaction = "3"          # Transaction / VersionedTransaction
solana-signature = "3"            # Signature
solana-keypair = "3"              # Keypair
solana-signer = "3"               # Signer trait
solana-system-interface = "3"     # system program instructions (transfer, etc.)
solana-address-lookup-table-interface = { version = "3", features = ["bincode"] } # v0 LUT resolution
solana-transaction-status-client-types = "3"

# --- JSON-RPC server ---
jsonrpsee = { version = "0.24", features = ["server", "macros"] }

# --- HTTP / REST (dashboard API) ---
axum = { version = "0.8", features = ["ws", "macros"] }
tower = { version = "0.5", features = ["full"] }
tower-http = { version = "0.6", features = ["cors", "trace", "compression-gzip"] }

# --- Async runtime ---
tokio = { version = "1.40", features = ["full"] }
tokio-util = "0.7"
futures-util = "0.3"

# --- Database (SQLite for MVP, swappable to Postgres in Phase 2) ---
sqlx = { version = "0.8", default-features = false, features = [
    "sqlite",
    "runtime-tokio",
    "migrate",
    "macros",
    "chrono",
] }

# --- In-memory cache ---
moka = { version = "0.12", features = ["future"] }
dashmap = "6.1"

# --- Serialization ---
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
bs58 = "0.5"
bincode = "1.3"
base64 = "0.22"

# --- Config ---
config = { version = "0.14", features = ["toml"] }
toml = "0.8"

# --- Error handling ---
thiserror = "2.0"
anyhow = "1.0"

# --- CLI ---
clap = { version = "4.5", features = ["derive", "env", "color"] }
indicatif = "0.17"
console = "0.15"
dialoguer = "0.11"

# --- HTTP client for mainnet RPC ---
reqwest = { version = "0.12", default-features = false, features = [
    "json",
    "rustls-tls",
] }

# --- Observability ---
tracing = "0.1"
# `json` enables the structured-logging layer used by `--log-format json` /
# `RUSTAG_LOG_FORMAT=json` (for when this runs in containers).
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }

# --- IDs / time ---
uuid = { version = "1.10", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }

# --- Rate limiting ---
governor = "0.6"

# --- Hashing (control-plane API-key digests) ---
sha2 = "0.10"

# --- Phase 3 cryptography ---
# Keccak-256 matches spl-account-compression's on-chain leaf/node hashing, so
# off-chain proofs computed by `rustag-compression` verify against real roots.
sha3 = "0.10"
# Hex encoding of Merkle roots/proofs/audit hashes inside JSON artifacts.
hex = "0.4"

# --- Real-time mirror (Phase 2, feature-gated) ---
# Pure-Rust WebSocket client for the standard `accountSubscribe` push stream.
# rustls (no OpenSSL/protoc) keeps it consistent with the reqwest TLS stack.
tokio-tungstenite = { version = "0.24", features = ["rustls-tls-webpki-roots"] }

# --- Internal crates ---
rustag-core = { path = "crates/rustag-core" }
rustag-mirror = { path = "crates/rustag-mirror" }
rustag-rpc = { path = "crates/rustag-rpc" }
rustag-scheduler = { path = "crates/rustag-scheduler" }
rustag-sim = { path = "crates/rustag-sim" }
rustag-cloud = { path = "crates/rustag-cloud" }
rustag-attest = { path = "crates/rustag-attest" }
rustag-replay = { path = "crates/rustag-replay" }
rustag-compression = { path = "crates/rustag-compression" }

[profile.release]
opt-level = 3
lto = "thin"
codegen-units = 1

# Faster, less noisy local dev builds of the heavy Solana dependency tree.
[profile.dev]
opt-level = 0
debug = 1
