[package]
name = "rustag-attest"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
homepage.workspace = true
description = "Verifiable staging attestation: signed, Merkle-rooted proofs of the state a Solana program was tested against"
keywords = ["solana", "attestation", "merkle", "audit", "ed25519"]
categories = ["development-tools", "cryptography"]

[dependencies]
rustag-core = { workspace = true }

# Solana key/signature primitives. `verify` pulls the ed25519 verifier so an
# attestation can be checked offline with nothing but the attester's pubkey.
solana-pubkey = { workspace = true }
solana-keypair = { workspace = true }
solana-signer = { workspace = true }
solana-signature = { workspace = true, features = ["verify"] }

# SHA-256 is the Merkle/commitment hash. Already in the workspace tree, so no
# new transitive dependency is introduced for the attestation path.
sha2 = { workspace = true }

bs58 = { workspace = true }
hex = { workspace = true }            # hex encoding of roots/proofs inside JSON artifacts
serde = { workspace = true }
serde_json = { workspace = true }
chrono = { workspace = true }
uuid = { workspace = true }
thiserror = { workspace = true }
