[package]
name = "rustag-cli"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
description = "RustAG command-line interface"
default-run = "rustag"

[[bin]]
name = "rustag"
path = "src/main.rs"

[dependencies]
rustag-core.workspace = true
rustag-rpc.workspace = true

solana-pubkey.workspace = true

tokio.workspace = true
clap.workspace = true
indicatif.workspace = true
console.workspace = true
reqwest.workspace = true
serde.workspace = true
serde_json.workspace = true
anyhow.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
chrono.workspace = true
uuid.workspace = true
