[package]
name = "rustag-cli"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
description = "RustAG command-line interface"
default-run = "rustag"

[[bin]]
name = "rustag"
path = "src/main.rs"

[features]
# Build the `rustag` binary with the real-time push mirror. Off by default.
realtime = ["rustag-rpc/realtime"]

[dependencies]
rustag-core.workspace = true
rustag-mirror.workspace = true
rustag-rpc.workspace = true
rustag-scheduler.workspace = true
rustag-attest.workspace = true
rustag-compression.workspace = true
rustag-sim.workspace = true
rustag-rehearse.workspace = true

solana-pubkey.workspace = true
solana-keypair.workspace = true
solana-signer.workspace = true
solana-signature.workspace = true
solana-transaction.workspace = true
solana-message.workspace = true
solana-system-interface.workspace = true
bs58.workspace = true
base64.workspace = true
bincode.workspace = true
hex.workspace = true

tokio.workspace = true
clap.workspace = true
indicatif.workspace = true
console.workspace = true
reqwest.workspace = true
serde.workspace = true
serde_json.workspace = true
anyhow.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
chrono.workspace = true
uuid.workspace = true
