[package]
name = "rustag-cloud"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
description = "RustAG cloud control plane: multi-tenant orchestration of stagenets"
default-run = "rustag-cloud"

[[bin]]
name = "rustag-cloud"
path = "src/main.rs"

[dependencies]
rustag-core.workspace = true

axum.workspace = true
tower.workspace = true
tower-http.workspace = true
tokio.workspace = true
reqwest.workspace = true
sqlx.workspace = true
serde.workspace = true
serde_json.workspace = true
sha2.workspace = true
bs58.workspace = true
thiserror.workspace = true
anyhow.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
uuid.workspace = true
chrono.workspace = true
clap.workspace = true
