[package]
name = "rustag-mirror"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
description = "RustAG mainnet mirror: lazy account fetch + background oracle sync"

[features]
# Real-time push mirror over the `accountSubscribe` WebSocket (Phase 2).
# Off by default so the standard build stays dependency-light.
realtime = ["dep:tokio-tungstenite", "dep:futures-util"]

[dependencies]
solana-address.workspace = true
solana-pubkey.workspace = true
solana-account.workspace = true

reqwest.workspace = true
tokio.workspace = true
serde.workspace = true
serde_json.workspace = true
bs58.workspace = true
base64.workspace = true
thiserror.workspace = true
tracing.workspace = true
chrono.workspace = true
governor.workspace = true

# --- Phase 2 real-time mirror (optional) ---
tokio-tungstenite = { workspace = true, optional = true }
futures-util = { workspace = true, optional = true }
