[package]
name = "rustag-rpc"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
description = "RustAG JSON-RPC + REST server (Solana-compatible)"

[dependencies]
rustag-core.workspace = true

solana-pubkey.workspace = true
solana-transaction.workspace = true
solana-hash.workspace = true
solana-signature.workspace = true

axum.workspace = true
tower.workspace = true
tower-http.workspace = true
tokio.workspace = true
futures-util.workspace = true
serde.workspace = true
serde_json.workspace = true
bs58.workspace = true
bincode.workspace = true
base64.workspace = true
thiserror.workspace = true
tracing.workspace = true
uuid.workspace = true
chrono.workspace = true

[dev-dependencies]
solana-keypair.workspace = true
solana-signer.workspace = true
solana-message.workspace = true
solana-system-interface.workspace = true
reqwest.workspace = true
