[package]
name = "rustag-scheduler"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
description = "RustAG Activity Scheduler: recurring on-chain actions (cron / interval) against a stagenet"

[dependencies]
rustag-core.workspace = true

solana-pubkey.workspace = true
solana-keypair.workspace = true
solana-signer.workspace = true
solana-message.workspace = true
solana-transaction.workspace = true
solana-system-interface.workspace = true

tokio.workspace = true
serde.workspace = true
serde_json.workspace = true
bs58.workspace = true
bincode.workspace = true
base64.workspace = true
thiserror.workspace = true
tracing.workspace = true
uuid.workspace = true
chrono.workspace = true
